--- a/vitrine/templates/vitrine/index.html
+++ b/vitrine/templates/vitrine/index.html
@@ -4,10 +4,11 @@
     <div class="container-fluid bg-light">
         <div class="container">
             <div class="row">
+
                 <!-- Left col -->
                 <div class="col-md-3">    
                     <div class="container" style="margin-top: 20px; background-color: white;">
-                        <img src="../app/../../static/img/vitrine/me.jpg" width="100%">
+                        <img src="../app/../../static/img/vitrine/me.jpg" width="100%" style="margin-top: 15px;">
                         <h5>A propos de moi</h5>
                         <p style="font-size: smaller; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
                             Hello world ! Je suis Mava Malonga Alpha, j'ai 24 ans, je suis développeur informatique,
@@ -18,17 +19,19 @@
                            juste me dire bonjour ou me payer un café, n’hésitez pas à <a href="mailto: mavamalonga.alpha@gmail.com">me contacter</a>.</p> 
                         <br>
                         <h5>Savoir-être</h5>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum natus est quidem aliquid modi error ab, blanditiis vero possimus iure, unde architecto optio, doloremque repellendus similique quibusdam a totam fugit?</p>
+                        <p style="font-size: smaller; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum natus est quidem aliquid modi error ab, blanditiis vero possimus iure, unde architecto optio, doloremque repellendus similique quibusdam a totam fugit?</p>
                     </div>
                 </div>
+
                 <!-- Center col -->
                 <div class="col-md-6">
+
+                    <!-- Top Reals -->
                     <h5>Top Réalisation</h5>
                     <div class="container" width="100%" style="margin-bottom: 10px;">
                         <div class="card" style="width: 106%; margin-left: -3%;">
                           <div class="card-body">
                             <h5>OC Lettings</h5>
-                            <!-- Badges -->
                             <div>
                               <span class="badge badge-primary">Python</span>
                               <span class="badge badge-secondary">Django</span>
@@ -37,21 +40,19 @@
                               <span class="badge badge-warning">Heroku</span>
                               <span class="badge badge-info">Sentry</span>
                             </div>
-                            <p>Mon portfolio personnel qui présente certains de mes projets github ainsi que mon CV et mes compétences techniques.<br>
+                            <p style="font-size: smaller; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Mon portfolio personnel qui présente certains de mes projets github ainsi que mon CV et mes compétences techniques.<br>
                             </p>
-                           
-                            <!-- Button to Open the Modal -->
                             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
                               Voir plus 
                             </button>
                           </div>
                         </div>
-                      
-                        <!-- The Modal -->
+
                         <!-- Large modal -->
                         <div class="modal fade bd-example-modal-lg" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
                           <div class="modal-dialog modal-lg">
                             <div class="modal-content">
+
                               <!-- Modal Header -->
                               <div class="modal-header">
                                 <h4 class="modal-title">OC Lettings</h4>
@@ -59,20 +60,22 @@
                               </div>
                               <div class="row">
                                 <div class="col-md-6">
+
                                   <!-- Modal body -->
                                   <div class="modal-body" width="hei">
                                     <img src="../../static/img/oc_lettings.png" width="100%">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut culpa tempora rem voluptatum dignissimos laborum nam accusantium exercitationem quidem molestias, debitis tenetur sed, placeat qui nostrum? Quis atque quisquam aliquam.
+                                    <p style="font-size: smaller; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla cum eum corporis dolorem quam at nisi quisquam ad laboriosam minima, sapiente delectus sunt tempore autem vitae quo dolorum, sint libero!</p>
                                   </div>
                                 </div>
                                 <div class="col-md-6">
+
                                   <!-- Modal body -->
                                   <div class="modal-body" width="hei">
                                     <h5>Fonctionnalités</h5>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut culpa tempora rem voluptatum dignissimos laborum nam accusantium exercitationem quidem molestias, debitis tenetur sed, placeat qui nostrum? Quis atque quisquam aliquam.
+                                    <p style="font-size: smaller; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique distinctio porro dolore quis illo dignissimos rerum aut? Vero recusandae, ut aspernatur provident ipsa adipisci consequuntur magni dolorem, enim eaque ullam.</p>
                                     <br><br>
                                     <h5>Compétences</h5>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et laborum, molestiae voluptates dicta sit quidem quaerat sed aperiam facilis dignissimos quas voluptas nostrum? Incidunt ipsa sed non harum maxime quod!</p>
+                                    <p style="font-size: smaller; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et laborum, molestiae voluptates dicta sit quidem quaerat sed aperiam facilis dignissimos quas voluptas nostrum? Incidunt ipsa sed non harum maxime quod!</p>
                                     <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
                                       <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
                                       <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
@@ -84,7 +87,7 @@
                                   </div>
                                 </div>
                               </div>
-                          
+
                               <!-- Modal footer -->
                               <div class="modal-footer">
                                 <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
@@ -92,7 +95,6 @@
                             </div>
                           </div>
                         </div>
-
                       </div>
 
                       <div class="container">
@@ -108,7 +110,7 @@
                               <span class="badge badge-warning">Heroku</span>
                               <span class="badge badge-info">Sentry</span>
                             </div>
-                            <p>Mon portfolio personnel qui présente certains de mes projets github ainsi que mon CV et mes compétences techniques.<br>
+                            <p style="font-size: smaller; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Mon portfolio personnel qui présente certains de mes projets github ainsi que mon CV et mes compétences techniques.<br>
                             </p>
                            
                             <!-- Button to Open the Modal -->
@@ -133,7 +135,7 @@
                                   <!-- Modal body -->
                                   <div class="modal-body" width="hei">
                                     <img src="../../static/img/oc_lettings.png" width="100%">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut culpa tempora rem voluptatum dignissimos laborum nam accusantium exercitationem quidem molestias, debitis tenetur sed, placeat qui nostrum? Quis atque quisquam aliquam.
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, est maxime? Vitae quisquam quibusdam, fugit neque velit at libero itaque veniam quam aliquam temporibus suscipit hic mollitia, impedit consequuntur quis?</p>  
                                   </div>
                                 </div>
                                 <div class="col-md-6">
@@ -172,10 +174,11 @@
                     <div class="container" width="100%" style="margin-bottom: 10px;">
                         <div class="card" style="width: 106%; margin-left: -3%;">
                           <div class="card-body" style="font-size: smaller;">
-                            <h5 style="font-size:large; color: #ff9c00;">Openclassrooms - Développeur d'application Python</h5>
+                            <img src="../../static/img/oc_logo.png" width="30%" height="30%" style="float: right;">
+                            <h5 style="font-size:large; color: #ff9c00;">Développeur d'application Python</h5>
                             <b>Paris - 2020 à 2022</b>
                             <p style="padding-bottom: 10px;">
-                                Spécialisation en développement d'application python via Openclassrooms.<br>
+                                Spécialisation en développement d'application python.<br>
                                 La formation Openclassrooms se découpe en 13 projets professionalisant d'une complexité croissante, essentielement des projet faite en python.
                                 Ce parcours forme à un métier de développeur back-end python en plus de python, on voit des technologies telles que le SQL, Javascript,
                                 les conteneurs avec Docker, l'automatisation des tâches CI/CD avec Circle et Heroku.
@@ -186,9 +189,10 @@
                     <div class="container" width="100%" style="margin-bottom: 10px;">
                         <div class="card" style="width: 106%; margin-left: -3%;">
                           <div class="card-body" style="font-size: smaller;">
+                            <img src="../../static/img/saclays.png" width="30%" height="30%" style="float: right;">
                             <h5 style="font-size:large; color: #ff9c00;">Licence Science pour l'Ingénieur (SPI)</h5>
                             <b>Paris Saclay - 2017 à 2020</b>
-                            <p style="padding-bottom: 10px;">Découverte de l'informatique.
+                            <p style="padding-bottom: 10px;">Découverte de l'informatique.<br>
                                 La licence m'a apportée les bases de la programmation (les structures conditionnelles, les boucles, les variables),
                                 j'ai écrit mes premières lignes de code avec le langage Processing, par la suite, j'ai fais de l'assembleur et des projets de modélisation en python.
                             </p>
@@ -198,9 +202,10 @@
                     <div class="container" width="100%" style="margin-bottom: 10px;">
                         <div class="card" style="width: 106%; margin-left: -3%;">
                           <div class="card-body" style="font-size: smaller;">
-                            <h5 style="font-size:large; color: #ff9c00;">Bac Scientifique (S)</h5>
+                            <img src="../../static/img/lycee.png" width="22%" height="22%" style="float: right;">
+                            <h5 style="font-size:large; color: #ff9c00;">Baccalauréat scientifique (S)</h5>
                             <b>Paris Saclay - 2017 à 2020</b>
-                            <p style="padding-bottom: 10px;">Découverte de l'informatique.
+                            <p style="padding-bottom: 10px;">
                                 Enseignement scientifique : mathématiques, algorithmes, physique chimie, SVT...<br>Initialisation à la programmation avec Casio Basic programming
                             </p>
                           </div>
@@ -323,6 +328,8 @@
                             </div>
                         </div>
                     </div>
+
+                    <!--Hobbies-->
                     <h5 style="margin-top: 30px;">Hobbies</h5>
                     <div class="container" style="background-color: white;">
                         <div class="container" style="margin-top: 10px;">
