--- a/vitrine/templates/vitrine/index.html
+++ b/vitrine/templates/vitrine/index.html
@@ -178,8 +178,6 @@
                             <h5 style="font-size:large; color: #ff9c00;">Développeur d'application Python</h5>
                             <b>Paris - 2020 à 2022</b>
                             <p style="padding-bottom: 10px;">
-                                Spécialisation en développement d'application python.<br>
-                                La formation Openclassrooms se découpe en 13 projets professionalisant d'une complexité croissante, essentielement des projet faite en python.
                                 Ce parcours forme à un métier de développeur back-end python en plus de python, on voit des technologies telles que le SQL, Javascript,
                                 les conteneurs avec Docker, l'automatisation des tâches CI/CD avec Circle et Heroku.
                             </p>
@@ -192,7 +190,7 @@
                             <img src="../../static/img/saclays.png" width="30%" height="30%" style="float: right;">
                             <h5 style="font-size:large; color: #ff9c00;">Licence Science pour l'Ingénieur (SPI)</h5>
                             <b>Paris Saclay - 2017 à 2020</b>
-                            <p style="padding-bottom: 10px;">Découverte de l'informatique.<br>
+                            <p style="padding-bottom: 10px;">
                                 La licence m'a apportée les bases de la programmation (les structures conditionnelles, les boucles, les variables),
                                 j'ai écrit mes premières lignes de code avec le langage Processing, par la suite, j'ai fais de l'assembleur et des projets de modélisation en python.
                             </p>
