--- a/blog/templates/blog/blogs.html
+++ b/blog/templates/blog/blogs.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
     <!-- Main -->
-    <div class="container-fluid">
-        <div class="container bg-light">
+    <div class="container-fluid bg-light">
+        <div class="container">
             <div class="row">
                 <!-- Left col -->
                 <div class="col-md-9">
@@ -10,8 +10,8 @@
                         <div class="row">
                           <div class="col-sm-4">
                             <div class="">
-                              <div class="card" style="width: 18rem;">
-                                <img src="../../static/img/oc_lettings.png" width="100%">
+                              <div class="card" style="width: 17rem;">
+                                <img src="../../static/img/oc_lettings.png" width="100%" height="200px">
                                 <div class="card-body">
 
                                   <!-- Badges -->
@@ -45,7 +45,7 @@
                                     <div class="row">
                                       <div class="col-md-6">
                                         <!-- Modal body -->
-                                        <div class="modal-body" width="hei">
+                                        <div class="modal-body">
                                           <img src="../../static/img/oc_lettings.png" width="100%">
                                           Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut culpa tempora rem voluptatum dignissimos laborum nam accusantium exercitationem quidem molestias, debitis tenetur sed, placeat qui nostrum? Quis atque quisquam aliquam.
                                         </div>
@@ -84,8 +84,8 @@
                           <div class="col-sm-4">
 
                             <div class="">
-                              <div class="card" style="width: 18rem;">
-                                <img src="../../static/img/l.png" width="100%">
+                              <div class="card" style="width: 17rem;">
+                                <img src="../../static/img/litreview.png" width="100%" height="200px">
                                 <div class="card-body">
                                   
                                   <!-- Badges -->
@@ -132,8 +132,8 @@
                           <div class="col-sm-4">
 
                             <div class="">
-                              <div class="card" style="width: 18rem;">
-                                <img src="../../static/img/soft.png" width="100%">
+                              <div class="card" style="width: 17rem;">
+                                <img src="../../static/img/soft.png" width="100%" height="200px">
                                 <div class="card-body">
                                   
                                   <!-- Badges -->
@@ -181,7 +181,7 @@
                           <div class="col-sm-4">
 
                             <div class="">
-                              <div class="card" style="width: 18rem;">
+                              <div class="card" style="width: 17.5rem;">
                                 <img src="../../static/img/epic.png" width="100%">
                                 <div class="card-body">
                                   
@@ -230,10 +230,9 @@
                           </div>
                           <div class="col-sm-4">
                             <div class="">
-                              <div class="card" style="width: 18rem;">
-                                <img src="../../static/img/gudlft.png" width="100%">
+                              <div class="card" style="width: 17.5rem;">
                                 <div class="card-body">
-                                  
+                                  <img src="../../static/img/gudlft.png" width="100%"><br><br>
                                   <!-- Badges -->
                                   <div class="">
                                     <span class="badge badge-primary">Python</span>
@@ -281,7 +280,7 @@
                           </div>
                           <div class="col-sm-4">
                             <div class="">
-                              <div class="card" style="width: 18rem;">
+                              <div class="card" style="width: 17.5rem;">
                                 <img src="../../static/img/juststreamit.png" width="100%">
                                 <div class="card-body">
                                   
@@ -329,8 +328,8 @@
                           </div>
                           <div class="col-sm-4">
                             <div class="">
-                              <div class="card" style="width: 18rem;">
-                                <img src="../../static/img/learn.png" width="100%">
+                              <div class="card" style="width: 17.5rem;">
+                                <img src="../../static/img/learn.png" width="100%"><br>
                                 <div class="card-body">
                                   
                                   <!-- Badges -->
@@ -377,7 +376,7 @@
                           </div>
                           <div class="col-sm-4">
                             <div class="">
-                              <div class="card" style="width: 18rem;">
+                              <div class="card" style="width: 17.5rem;">
                                 <img src="../../static/img/echec.png" width="100%">
                                 <div class="card-body">
                                   
@@ -424,7 +423,7 @@
                           </div>
                           <div class="col-sm-4">
                             <div class="">
-                              <div class="card" style="width: 18rem;">
+                              <div class="card" style="width: 17.5rem;">
                                 <img src="../../static/img/algo.png" width="100%">
                                 <div class="card-body">
                                   
