--- a/blog/templates/blog/blogs.html
+++ b/blog/templates/blog/blogs.html
@@ -133,7 +133,7 @@
 
                             <div class="">
                               <div class="card" style="width: 17rem;">
-                                <img src="../../static/img/soft.png" width="100%" height="200px">
+                                <img src="../../static/img/soft.png" width="100%">
                                 <div class="card-body">
                                   
                                   <!-- Badges -->
