--- a/vitrine/templates/vitrine/index.html
+++ b/vitrine/templates/vitrine/index.html
@@ -4,11 +4,10 @@
     <div class="container-fluid bg-light">
         <div class="container">
             <div class="row">
-
                 <!-- Left col -->
                 <div class="col-md-3">    
                     <div class="container" style="margin-top: 20px; background-color: white;">
-                        <img src="../app/../../static/img/vitrine/me.jpg" width="100%" style="margin-top: 15px;">
+                        <img src="../app/../../static/img/vitrine/me.jpg" width="100%" style="margin-top: 15px; margin-bottom: 15px;">
                         <h5>A propos de moi</h5>
                         <p style="font-size: smaller; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
                             Hello world ! Je suis Mava Malonga Alpha, j'ai 24 ans, je suis développeur informatique,
@@ -17,9 +16,8 @@
                            je pratique au quotidien, quelques projets personnels et que je présente certains événements auxquels je participe.<br><br>
                            J’espère que ça va vous plaire ! Si vous souhaitez bavarder, si vous avez des questions ou des remarques, si vous souhaitez 
                            juste me dire bonjour ou me payer un café, n’hésitez pas à <a href="mailto: mavamalonga.alpha@gmail.com">me contacter</a>.</p> 
-                        <br>
                         <h5>Savoir-être</h5>
-                        <p style="font-size: smaller; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum natus est quidem aliquid modi error ab, blanditiis vero possimus iure, unde architecto optio, doloremque repellendus similique quibusdam a totam fugit?</p>
+                        <p style="padding-bottom: 30px; font-size: smaller; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum natus est quidem aliquid modi error ab, blanditiis vero possimus iure, unde architecto optio, doloremque repellendus similique quibusdam a totam fugit?</p>
                     </div>
                 </div>
 
@@ -31,20 +29,8 @@
                     <div class="container" width="100%" style="margin-bottom: 10px;">
                         <div class="card" style="width: 106%; margin-left: -3%;">
                           <div class="card-body">
-                            <div style="float:right; margin-right: 30px;">
-                                <a href="#">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
-                                    <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
-                                    <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
-                                </svg>
-                                </a>
-                                <a href="#">
-                                  <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
-                                    <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
-                                  </svg>
-                                </a>
-                            </div>
                             <div>
+                            <img src="../../static/img/litU.png" width="15%" height="15%" style="float: right; margin-right: 30px;">
                             <h5>OC Lettings</h5>
                               <span class="badge badge-primary">Python</span>
                               <span class="badge badge-secondary">Django</span>
@@ -133,19 +119,7 @@
                       <div class="container">
                         <div class="card" style="width: 106%; margin-left: -3%;">
                           <div class="card-body" style="width: 100%;">
-                            <div style="float:right; margin-right: 30px;">
-                                <a href="#">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
-                                    <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
-                                    <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
-                                </svg>
-                                </a>
-                                <a href="#">
-                                  <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
-                                    <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
-                                  </svg>
-                                </a>
-                            </div>
+                            <img src="../../static/img/litU.png" width="15%" height="15%" style="float: right; margin-right: 30px;">
                             <h5>OC Lettings</h5>
                             <!-- Badges -->
                             <div>
@@ -222,7 +196,7 @@
                           <div class="card-body" style="font-size: smaller;">
                             <img src="../../static/img/oc_logo.png" width="30%" height="30%" style="float: right;">
                             <h5 style="font-size:large; color: #ff9c00;">Développeur d'application Python</h5>
-                            <b>Paris - 2020 à 2022</b>
+                            <small class="text-muted"><b>Paris 2020-2022</b></small>
                             <p style="padding-bottom: 10px;">
                                 Ce parcours forme à un métier de développeur back-end python en plus de python, on voit des technologies telles que le SQL, Javascript,
                                 les conteneurs avec Docker, l'automatisation des tâches CI/CD avec Circle et Heroku.
@@ -235,7 +209,7 @@
                           <div class="card-body" style="font-size: smaller;">
                             <img src="../../static/img/saclays.png" width="30%" height="30%" style="float: right;">
                             <h5 style="font-size:large; color: #ff9c00;">Licence Science pour l'Ingénieur (SPI)</h5>
-                            <b>Paris Saclay - 2017 à 2020</b>
+                            <small class="text-muted"><b>Evry 2017-2020</b></small>
                             <p style="padding-bottom: 10px;">
                                 La licence m'a apportée les bases de la programmation (les structures conditionnelles, les boucles, les variables),
                                 j'ai écrit mes premières lignes de code avec le langage Processing, par la suite, j'ai fais de l'assembleur et des projets de modélisation en python.
@@ -248,7 +222,7 @@
                           <div class="card-body" style="font-size: smaller;">
                             <img src="../../static/img/lycee.png" width="22%" height="22%" style="float: right;">
                             <h5 style="font-size:large; color: #ff9c00;">Baccalauréat scientifique (S)</h5>
-                            <b>Paris Saclay - 2017 à 2020</b>
+                            <small class="text-muted"><b>Epinay-sous-sénart 2014-2017</b></small>
                             <p style="padding-bottom: 10px;">
                                 Enseignement scientifique : mathématiques, algorithmes, physique chimie, SVT...<br>Initialisation à la programmation avec Casio Basic programming
                             </p>
