--- a/my_profile/templates/my_profile/home.html
+++ b/my_profile/templates/my_profile/home.html
@@ -121,8 +121,8 @@
                             <h5 style="font-size:large; color: #ff9c00;">Développeur d'application Python</h5>
                             <small class="text-muted"><b>Paris 2020-2022</b></small>
                             <p style="padding-bottom: 10px;">
-                                Ce parcours forme à un métier de développeur back-end python en plus de python, on voit des technologies telles que le SQL, Javascript,
-                                les conteneurs avec Docker, l'automatisation des tâches CI/CD avec Circle et Heroku.
+                                Ce parcours forme à un métier de développeur back-end python en plus de python, 
+                                on voit des technologies telles que le SQL, Javascript,
                             </p>
                           </div>
                         </div>
@@ -134,8 +134,8 @@
                             <h5 style="font-size:large; color: #ff9c00;">Licence Science pour l'Ingénieur (SPI)</h5>
                             <small class="text-muted"><b>Evry 2017-2020</b></small>
                             <p style="padding-bottom: 10px;">
-                                La licence m'a apportée les bases de la programmation (les structures conditionnelles, les boucles, les variables),
-                                j'ai écrit mes premières lignes de code avec le langage Processing, par la suite, j'ai fais de l'assembleur et des projets de modélisation en python.
+                                La licence m'a apportée les bases de la programmation (les structures conditionnelles, 
+                                les boucles, les variables), j'ai écrit mes premières lignes
                             </p>
                           </div>
                         </div>
