--- a/blog/templates/blog/blogs.html
+++ b/blog/templates/blog/blogs.html
@@ -129,19 +129,37 @@
     <!-- Pagination -->
     <nav aria-label="..." style="margin-left: 28%; margin-top: 50px;">
       <ul class="pagination">
+        {% if p_projects.has_previous %}
+        <li class="page-item">
+          <a class="page-link" href="?page={{ p_projects.previous_page_number }}">
+            Previous
+          </a>
+        </li>
+        {% else %}
         <li class="page-item disabled">
           <span class="page-link">Previous</span>
         </li>
-        <li class="page-item active"><a class="page-link" href="#">1</a></li>
+        {% endif %}
+        <li class="page-item active"><a class="page-link" href="?page=1">1</a></li>
         <li class="page-item"><a class="page-link" href="#">2</a></li>
         <li class="page-item"><a class="page-link" href="#">3</a></li>
+        {% if p_projects.has_next %}
         <li class="page-item">
+          <a class="page-link" href="?page={{ p_projects.next_page_number }}">Next</a>
+        </li>
+        {% else %}
+        <li class="page-item disabled">
           <a class="page-link" href="#">Next</a>
         </li>
+        {% endif %}
       </ul>
     </nav>
 
-    {{ p_projects }}
+    {{ p_projects }}<br/>
+    Current Page: {{ p_projects.number }}<br/>
+    Number of Pages: {{ p_projects.paginator.num_pages }}<br/>
+
+    
 
 
 {% endblock %}
