--- a/blog/templates/blog/blogs.html
+++ b/blog/templates/blog/blogs.html
@@ -102,30 +102,30 @@
                   <div class="container">
                     <div class="list-group">
                       <button type="button" class="list-group-item list-group-item-action disabled"><h4>Filter</h4></button>
-                      <a href="?filter=python" style="text-decoration: none;">
+                      <a href="?filter=Python" style="text-decoration: none;">
                       <button type="button" class="list-group-item list-group-item-action">
                         Python
                         <span class="badge badge-primary badge-pill" style="float:right;">14</span>
                       </button>
                       </a>
-                      <a href="?filter=django" style="text-decoration: none;">
+                      <a href="?filter=Django" style="text-decoration: none;">
                       <button type="button" class="list-group-item list-group-item-action">Django
                         <span class="badge badge-primary badge-pill" style="float:right;">14</span>
                       </button>
                       </a>
-                      <a href="?filter=flask" style="text-decoration: none;">
+                      <a href="?filter=Flask" style="text-decoration: none;">
                         <button type="button" class="list-group-item list-group-item-action">Flask</button>
                       </a>
-                      <a href="?filter=javaScript" style="text-decoration: none;">
+                      <a href="?filter=JavaScript" style="text-decoration: none;">
                       <button type="button" class="list-group-item list-group-item-action">JavaScript</button>
                       </a>
-                      <a href="?filter=react" style="text-decoration: none;">
+                      <a href="?filter=React" style="text-decoration: none;">
                       <button type="button" class="list-group-item list-group-item-action">React.js</button>
                       </a>
-                      <a href="?filter=node" style="text-decoration: none;">
+                      <a href="?filter=Node" style="text-decoration: none;">
                         <button type="button" class="list-group-item list-group-item-action">Node.js</button>
                       </a>
-                      <a href="?filter=rust" style="text-decoration: none;">
+                      <a href="?filter=Rust" style="text-decoration: none;">
                         <button type="button" class="list-group-item list-group-item-action">Rust</button>
                       </a>
                     </div>
