--- a/blog/templates/blog/blogs.html
+++ b/blog/templates/blog/blogs.html
@@ -101,16 +101,16 @@
                 <div class="col-md-3">
                   <div class="container">
                     <div class="list-group">
-                      <button type="button" class="list-group-item list-group-item-action disabled"><h4>Filter</h4></button>
+                      <button type="button" class="list-group-item list-group-item-action disabled"><h4>Filter
+                      </h4>
+                      </button>
                       <a href="?filter=Python" style="text-decoration: none;">
                       <button type="button" class="list-group-item list-group-item-action">
                         Python
-                        <span class="badge badge-primary badge-pill" style="float:right;">14</span>
                       </button>
                       </a>
                       <a href="?filter=Django" style="text-decoration: none;">
                       <button type="button" class="list-group-item list-group-item-action">Django
-                        <span class="badge badge-primary badge-pill" style="float:right;">14</span>
                       </button>
                       </a>
                       <a href="?filter=Flask" style="text-decoration: none;">
