--- a/vitrine/templates/vitrine/mentions.html
+++ b/vitrine/templates/vitrine/mentions.html
@@ -36,4 +36,5 @@
             <p>Les commentaires et trackbacks/pingback de ce site sont modérés manuellement. Le responsable de ce site se réserve le droit de supprimer tout commentaire ou trackback/pingback qu’il jugera non approprié.</p>
         </div>
     </div>
+    <a href="{{ cv.pdf.url }}" download>Download the pdf</a>
 {% endblock %}
