--- a/templates/base.html
+++ b/templates/base.html
@@ -10,33 +10,33 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-    <style>
-   
-    </style>
 </head>
 <body>
     <!-- Header -->
     <div class="container-fluid">
         <div class="container">
             <h1 style="font-size: large; font-family: 'Courier New', Courier, monospace; margin-top: 10px;"><b>MAVA MALONGA Alpha<br><span style="color:#ff9c00; ">Développeur Back-end Python & Django</span></b></h1>
-            <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgba(0, 0, 0, 0.05);; margin-bottom: 10px; height: 30px;">
-                <div class="container-fluid" style="padding: 0;">
-                    <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
-                    style="width: 20%; height: 20%; margin-top: -8px; padding: 0px; border-width: 0px;">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarCollapse">
-                        <div class="navbar-nav">
-                            <a href="{% url 'index' %}" class="nav-item nav-link active" style="font-weight:bold;">Acceuil</a>
-                            <a href="{% url 'blogs' %}" class="nav-item nav-link" style="font-weight:bold;">Réalisation</a>
-                            <a href="#" class="nav-item nav-link" style="font-weight:bold;">Blog</a>
-                        </div>
-                        <div class="navbar-nav ms-auto">
-                            <a href="{{ cv.pdf.url }}" class="nav-item nav-link" style="font-weight:bold;">Curriculum vitae</a>
-                        </div>
-                    </div>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin-bottom: 10px;">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+              
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a href="{% url 'index' %}" class="nav-item nav-link active" style="font-weight:bold;">Acceuil</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{% url 'blogs' %}" class="nav-item nav-link" style="font-weight:bold;">Réalisations</a>
+                    </li>
+                  </ul>
+                  {% if page_name == 'dashboard' %}
+                  <div class="navbar-nav ms-auto">
+                    <a href="{{ cv.pdf.url }}" class="nav-item nav-link" style="font-weight:bold;">Curriculum vitae</a>
+                  </div>
+                  {% endif %}
                 </div>
-            </nav>
+              </nav>
         </div>
     </div>
     <!-- End Header -->
