--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
                         <a href="{% url 'index' %}" class="nav-item nav-link active" style="font-weight:bold;">Acceuil</a>
                     </li>
                     <li class="nav-item">
-                        <a href="{% url 'blogs' %}" class="nav-item nav-link" style="font-weight:bold;">Réalisations</a>
+                        <a href="{% url 'projects' %}" class="nav-item nav-link" style="font-weight:bold;">Réalisations</a>
                     </li>
                   </ul>
                   {% if page_name == 'dashboard' %}
@@ -53,7 +53,7 @@
     <footer class="text-center text-lg-start bg-light text-muted">
         <!-- Copyright -->
         <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05); font-size: large; font-family: 'Courier New', Courier, monospace; margin-top: 10px;">
-        Copyright © 2022 MAVA MALONGA Alpha - <a href="{% url 'mentions' %}">Mentions légales</a><br>
+        Copyright © 2022 MAVA MALONGA Alpha - <a href="{% url 'mentions-legales' %}">Mentions légales</a><br>
                 <!-- Linkedin -->
                 <a href="https://www.linkedin.com/in/alpha-mava-malonga/">
                 <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
